# blockfrost-platform

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  default.nix  deny.toml  do-dev.yml  docker-compose.yml  flake.nix  rust-toolchain.toml  rustfmt.toml  shell.nix
.cargo/: audit.toml
blockfrost-platform-macro-tests/: Cargo.toml
blockfrost-platform-macros/: Cargo.toml
crates/common/: Cargo.toml  build.rs
crates/common/src/: addresses.rs  blocks.rs  cardano_keys.rs  chain_config.rs  cli.rs  config.rs  dreps.rs  epochs.rs  errors.rs  find_libexec.rs  genesis.rs  helpers.rs  hydra.rs  json_client.rs  lib.rs  pagination.rs  payment_cred.rs  pools.rs  tracing.rs  types.rs  validation.rs
crates/dolos/: Cargo.toml  build.rs  dolos.toml
crates/dolos/scripts/: download.sh
crates/dolos/src/: api.rs  blocks.rs  client.rs  config.rs  download.rs  lib.rs  runner.rs
crates/dolos/src/api/: accounts.rs  addresses.rs  assets.rs  blocks.rs  epochs.rs  genesis.rs  governance.rs  metadata.rs  network.rs  pools.rs  root.rs  txs.rs
crates/error_decoder/: Cargo.toml  README.md  build.rs
crates/error_decoder/src/: external.rs  lib.rs  tests.rs
crates/error_decoder/src/tests/: random.rs  specific.rs
crates/gateway/: CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml  flake.nix
crates/gateway/.cargo/: audit.toml
crates/gateway/.github/workflows/: ci.yaml
crates/gateway/config/: development.toml  production.toml
crates/gateway/nix/internal/: unix.nix
crates/gateway/src/: blockfrost.rs  bridge_main.rs  config.rs  db.rs  errors.rs  gateway_main.rs  health_monitor.rs  hydra.rs  lib.rs  load_balancer.rs  main.rs  models.rs  payload.rs  sdk_bridge_ws.rs
crates/gateway/src/api/: metrics.rs  register.rs  root.rs
crates/gateway/src/hydra/: mod.rs  verifications.rs
crates/gateway/src/hydra/client/: mod.rs  verifications.rs
crates/gateway/src/hydra/server/: mod.rs  verifications.rs
crates/gateway/src/hydra_server_bridge/: mod.rs  verifications.rs
crates/gateway/src/hydra_server_platform/: mod.rs  verifications.rs
crates/gateway/src/middlewares/: metrics.rs
crates/gateway/tests/: load_balancer.rs
crates/gateway/tests/common/: mod.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: lib.rs
crates/integration_tests/src/gateway/: mod.rs
crates/integration_tests/src/platform/: mod.rs
crates/integration_tests/tests/: data_node_smoke.rs  dolos_smoke.rs  e2e_websocket.rs  eval_test.rs  gateway_load_balancer.rs  gateway_rate_limit.rs  icebreakers_test.rs  platform_data_node.rs  platform_icebreakers.rs  platform_metrics.rs  platform_root.rs  platform_submit.rs
crates/integration_tests/tests/api/utils/txs/evaluate/: root.rs  utxos.rs
crates/integration_tests/tests/data/: ignored_tests.json  supported_endpoints.json
crates/node/: Cargo.toml  build.rs
crates/node/src/: cbor.rs  chain_config.rs  chain_config_watch.rs  connection.rs  ledger.rs  lib.rs  pool.rs  pool_manager.rs  sync_progress.rs  transactions.rs  utxo.rs
crates/node/src/api/: txs.rs
crates/node/src/cbor/: fallback_decoder.rs  tests.rs  validation.rs
crates/node/src/cbor/tests/: random_eval_tx.rs
crates/node/src/monitoring/: chain_staleness_monitor.rs
crates/platform/: Cargo.toml  build.rs
crates/platform/src/: addresses.rs  blocks.rs  cli.rs  config.rs  epochs.rs  genesis.rs  health_monitor.rs  hydra.rs  lib.rs  load_balancer.rs  main.rs  server.rs
crates/platform/src/api/: root.rs
crates/platform/src/api/accounts/stake_address/: delegations.rs  root.rs  utxos.rs  withdrawals.rs
crates/platform/src/api/accounts/stake_address/addresses/: root.rs
crates/platform/src/api/addresses/address/: root.rs
crates/platform/src/api/addresses/address/utxos/: asset.rs
crates/platform/src/api/assets/asset/: transactions.rs
crates/platform/src/api/blocks/hash_or_number/: root.rs  txs.rs
crates/platform/src/api/blocks/hash_or_number/txs/: cbor.rs
crates/platform/src/api/blocks/latest/: txs.rs
crates/platform/src/api/blocks/latest/txs/: cbor.rs
crates/platform/src/api/blocks/slot/: slot_number.rs
crates/platform/src/api/epochs/number/: parameters.rs
crates/platform/src/api/governance/dreps/drep_id/: root.rs
crates/platform/src/api/ledger/: genesis.rs
crates/platform/src/api/metadata/txs/: labels.rs
crates/platform/src/api/metadata/txs/label/: cbor.rs  root.rs
crates/platform/src/api/network/: eras.rs
crates/platform/src/api/pools/: extended.rs  retiring.rs
crates/platform/src/api/pools/pool_id/: delegators.rs  metadata.rs  root.rs
crates/platform/src/api/tx/: submit.rs
crates/platform/src/api/txs/hash/: cbor.rs  mirs.rs  pool_updates.rs  stakes.rs  utxos.rs  withdrawals.rs
crates/platform/src/api/txs/hash/metadata/: cbor.rs  root.rs
crates/platform/src/api/utils/txs/evaluate/: model.rs  root.rs  utxos.rs
crates/platform/src/hydra/: tunnel.rs
crates/platform/src/hydra_client/: mod.rs  verifications.rs
crates/platform/src/icebreakers/: api.rs  manager.rs
crates/platform/src/server/: logging.rs  routes.rs  state.rs
crates/platform/src/server/routes/: hidden.rs
crates/platform/tests/: data_node_test.rs  eval_test.rs  icebreakers_test.rs  metrics_test.rs  root_test.rs  submit_test.rs
crates/platform/tests/api/: utils.rs
crates/platform/tests/api/utils/txs/evaluate/: root.rs  utxos.rs
crates/platform/tests/common/: mod.rs  tx_builder.rs
crates/platform/tests/data/: blacklisted_endpoints.json  ignored_tests.json  supported_endpoints.json
crates/sdk_bridge/: Cargo.toml  build.rs
crates/sdk_bridge/src/: config.rs  http_proxy.rs  main.rs  types.rs  ws_client.rs
crates/sdk_bridge/src/hydra_client/: mod.rs  tunnel2.rs  verifications.rs
crates/testgen/: Cargo.toml  README.md
crates/testgen/src/: lib.rs  testgen.rs  tests.rs
crates/tx_evaluator/: Cargo.toml  README.md
crates/tx_evaluator/src/: external.rs  helper.rs  helpers.rs  ledger.rs  lib.rs  model.rs  native.rs  ogmios5_response.rs  version_convertor.rs  wrapper.rs
crates/tx_evaluator/src/model/: api.rs  ledger.rs  mod.rs
(+325 files in other folders)
