[package]
name = "blockfrost-gateway"
version = "1.3.3"
license-file = "LICENSE"
publish = false
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.39.2", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.24"
tungstenite = "0.24"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.3", features = ["chrono", "postgres"] }
diesel_migrations = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.122"
colored = "2.1.0"
clap = { version = "4.5.14", features = ["derive"] }
toml = "0.9.5"
thiserror = "1.0.63"
chrono = { version = "0.4.3", features = ["serde"] }
reqwest = "0.12.5"
blockfrost = "1.1.0"
dotenvy = "0.15.7"
hex = "0.4.3"
rand = "0.8.5"
base64 = "0.21"
uuid = "1.10"
hyper = "1.4.1"

[lib]
name = "blockfrost_gateway"
path = "src/lib.rs"

[dev-dependencies]
rstest = "0.26.1"
