[workspace.package]
version = "0.0.3-rc.3"
license = "Apache-2.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "crates/platform",
  "crates/build_utils",
  "crates/common",
  "crates/api_provider",
  "crates/node",
  "crates/data_node",
  "crates/gateway",
]
default-members = ["crates/platform"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["ws"] }
bech32 = "0.11.1"
bf-api-provider = { path = "crates/api_provider", package = "blockfrost-platform-api-provider" }
bf-build-utils = { path = "crates/build_utils", package = "blockfrost-platform-build-utils" }
bf-common = { path = "crates/common", package = "blockfrost-platform-common" }
bf-data-node = { path = "crates/data_node", package = "blockfrost-platform-data-node" }
bf-node = { path = "crates/node", package = "blockfrost-platform-node" }
blockfrost-openapi = "0.1.83"
cardano-serialization-lib = "15.0.3"
chrono = "0.4"
clap = { version = "4.5.57", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
inquire = "0.9"
metrics = { version = "0.24.3", default-features = false }
pallas = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha4" }
pallas-addresses = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha4" }
pallas-codec = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha4" }
pallas-crypto = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha4" }
pallas-hardano = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha4" }
pallas-network = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha4" }
pallas-primitives = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha4" }
pallas-traverse = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha4" }
pretty_assertions = "1.4.1"
reqwest = { version = "0.13.1", default-features = false, features = [
  "blocking",
  "http2",
  "json",
  "native-tls",
] }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
  "rt",
  "rt-multi-thread",
  "signal",
  "process",
] }
toml = "0.9.11"
tracing = "0.1.44"
twelf = { version = "0.15.0", features = ["clap", "toml"] }
url = "2"
uuid = { version = "1.10", features = ["serde", "v4"] }

[workspace.lints.clippy]
uninlined_format_args = "deny"
