[package]
name = "blockfrost-platform-common"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
axum.workspace = true
bf-api-provider.workspace = true
pallas-network.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true
reqwest.workspace = true
bech32.workspace = true
cardano-serialization-lib.workspace = true
hex.workspace = true
dirs.workspace = true
url.workspace = true
toml.workspace = true
futures.workspace = true
tokio.workspace = true
twelf.workspace = true
inquire.workspace = true
anyhow.workspace = true
futures-util.workspace = true
clap.workspace = true
pallas-addresses.workspace = true

[dev-dependencies]
rstest.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true

[build-dependencies]
bf-build-utils.workspace = true

[lints]
workspace = true
