[package]
name = "common"
version = "0.0.3-rc.3"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
axum = { version = "0.8.2", features = ["ws"] }
pallas-network = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha2" }
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"] }
tracing = "0.1.41"
serde_json = "1.0.135"
reqwest = { version = "0.12.12", features = ["json"] }
bech32 = "0.9.1"
cardano-serialization-lib = "12.1.1"
hex = "0.4.3"
dirs = "5.0"
url = "2"
toml = "0.8"
futures = "0.3"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "signal"] }
twelf = { version = "0.15.0", features = ["clap", "toml"] }
inquire = "0.9"
anyhow = "1.0.95"
futures-util = "0.3"
blockfrost-openapi = "0.1.75"
clap = { version = "4.5.26", features = ["derive"] }
pallas-addresses = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha2" }

[dev-dependencies]
rstest = "0.24.0"
pretty_assertions = "1.4.1"

[build-dependencies]
build-utils = { path = "../build_utils" }

[lints.clippy]
uninlined_format_args = "deny"
