[package]
name = "dolos"
version = "0.0.1"
license = "Apache-2.0"
edition = "2021"

[package.metadata.dolos]
version = "v0.24.0"

[dependencies]
common = { path = "../common" }
api-provider = { path = "../api_provider" }
serde = { version = "1.0.218", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
blockfrost-openapi = "0.1.75"
axum = { version = "0.8.2", features = ["ws"] }

[lints.clippy]
uninlined_format_args = "deny"
