[package]
name = "dolos"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
api-provider = { path = "../api_provider" }
serde.workspace = true
reqwest.workspace = true
toml.workspace = true
dirs.workspace = true
blockfrost-openapi.workspace = true
async-trait.workspace = true
axum.workspace = true

[lints]
workspace = true
