[package]
name = "blockfrost-platform-dolos"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bf-common.workspace = true
bf-api-provider.workspace = true
serde.workspace = true
reqwest.workspace = true
toml.workspace = true
dirs.workspace = true
blockfrost-openapi.workspace = true
async-trait.workspace = true
axum.workspace = true

[lints]
workspace = true
