[package]
name = "error-decoder"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
testgen = {path = "../testgen"}
hex = "0.4.3"
sysinfo = "0.33.1"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "signal"] }
pallas-network = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha5" }
pallas-hardano = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha5" }
pallas-codec = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha5" }

[features]
tarpaulin = []
