[package]
name = "blockfrost-gateway"
version.workspace = true
license.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = []
dev_mock_db = []

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"
tower = "0.5.3"
kameo = "0.19"
bytes = "1"
tokio-tungstenite = "0.24"
tungstenite = "0.24"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.3", features = ["chrono", "postgres"] }
diesel_migrations = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.122"
colored = "2.1.0"
clap = { version = "4.5.14", features = ["derive"] }
dirs = "6.0.0"
toml = "0.9.5"
thiserror = "1.0.63"
chrono = { version = "0.4.3", features = ["serde"] }
reqwest = "0.12.5"
blockfrost = "1.1.0"
dotenvy = "0.15.7"
hex = "0.4.3"
rand = "0.8.5"
base64 = "0.21"
uuid.workspace = true
hyper = "1.4.1"
machine-uid = "0.5"
blake3 = "1"
getrandom = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", default-features = false, features = ["signal"] }

[lib]
name = "blockfrost_gateway"
path = "src/lib.rs"

[dev-dependencies]
rstest = "0.26.1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }

[lints]
workspace = true
