[package]
name = "blockfrost-gateway"
version.workspace = true
license.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
default = []
dev_mock_db = []

[dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
futures-util.workspace = true
tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
colored.workspace = true
clap.workspace = true
toml.workspace = true
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
blockfrost.workspace = true
dotenvy.workspace = true
hex.workspace = true
rand.workspace = true
base64.workspace = true
uuid.workspace = true
hyper.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true

[lib]
name = "blockfrost_gateway"
path = "src/lib.rs"

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
