[package]
name = "node"
version.workspace = true
license.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
common = { path = "../common" }
serde.workspace = true
reqwest.workspace = true
toml.workspace = true
tracing.workspace = true
crossbeam = "0.8"
hex.workspace = true
dirs.workspace = true
serde_json.workspace = true
tokio.workspace = true
pallas-network.workspace = true
deadpool = "0.12.1"
sysinfo = "0.33.1"
num_cpus = "1"
metrics.workspace = true
pallas-hardano.workspace = true
pallas-crypto.workspace = true
pallas-traverse.workspace = true
pallas-codec.workspace = true
pallas-primitives.workspace = true
chrono.workspace = true

[build-dependencies]
build-utils = { path = "../build_utils" }

[features]
tarpaulin = []

[lints]
workspace = true
