[package]
name = "blockfrost-platform-node"
version.workspace = true
license.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
bf-common.workspace = true
serde.workspace = true
reqwest.workspace = true
toml.workspace = true
tracing.workspace = true
crossbeam.workspace = true
hex.workspace = true
dirs.workspace = true
serde_json.workspace = true
tokio.workspace = true
pallas-network.workspace = true
deadpool = "0.12.3"
sysinfo = "0.37.2"
num_cpus = "1"
metrics.workspace = true
pallas-hardano.workspace = true
pallas-crypto.workspace = true
pallas-traverse.workspace = true
pallas-codec.workspace = true
pallas-primitives.workspace = true
chrono.workspace = true

[build-dependencies]
bf-build-utils.workspace = true

[features]
tarpaulin = []

[lints]
workspace = true
