[package]
name = "blockfrost-platform"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "The Blockfrost platform transforms your Cardano node infrastructure into a high-performance JSON API endpoint."
homepage = "https://platform.blockfrost.io"
repository = "https://github.com/blockfrost/blockfrost-platform"
build = "build.rs"

[dependencies]
bf-common.workspace = true
bf-node.workspace = true
bf-data-node.workspace = true
bf-api-provider.workspace = true

axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
futures-util.workspace = true
bytes.workspace = true
tungstenite = { version = "0.26", features = ["native-tls"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
serde.workspace = true
tower-http = { version = "0.6.6", features = ["normalize-path"] }
tower = "0.5.2"
hyper = "1.6.0"
serde_json.workspace = true
clap.workspace = true
toml.workspace = true
thiserror.workspace = true
sentry = "0.41.0"
base64 = "0.22.1"
pallas.workspace = true
pallas-network.workspace = true
pallas-crypto.workspace = true
pallas-traverse.workspace = true
pallas-codec.workspace = true
pallas-addresses.workspace = true
pallas-primitives.workspace = true
pallas-hardano.workspace = true
reqwest.workspace = true
hex.workspace = true
metrics.workspace = true
metrics-exporter-prometheus = { version = "0.16.1", default-features = false }
metrics-process = "2.4.0"
chrono.workspace = true
serde_with = "3.12.0"
dotenvy = "0.15.7"
uuid = { version = "1.10.0", features = ["v4"] }
twelf.workspace = true
dirs.workspace = true
inquire.workspace = true
anyhow.workspace = true
bech32.workspace = true
cardano-serialization-lib.workspace = true
ntest = "0.9.3"
sysinfo.workspace = true
machine-uid = "0.5"
blake3 = "1"
getrandom = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", default-features = false, features = ["signal"] }

[dev-dependencies]
bf-api-provider.workspace = true
tracing-test = "0.2.5"
rstest = "0.24.0"
pretty_assertions = "1.4.1"
proptest = "1.6"
cardano-serialization-lib.workspace = true
bip39 = "2.1.0"
blockfrost = "1.1.0"

[target.'cfg(target_env = "musl")'.dependencies]
jemalloc = "0.3"

[build-dependencies]
bf-build-utils.workspace = true

[lints]
workspace = true
