[package]
name = "blockfrost-platform"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "The Blockfrost platform transforms your Cardano node infrastructure into a high-performance JSON API endpoint."
homepage = "https://platform.blockfrost.io"
repository = "https://github.com/blockfrost/blockfrost-platform"
build = "build.rs"

[dependencies]
bf-common.workspace = true
bf-node.workspace = true
bf-data-node.workspace = true
bf-api-provider.workspace = true

axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
futures-util.workspace = true
tungstenite = { workspace = true, features = ["native-tls"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
hyper.workspace = true
tower-http.workspace = true
tower.workspace = true
serde_json.workspace = true
clap.workspace = true
toml.workspace = true
thiserror.workspace = true
sentry.workspace = true
base64.workspace = true
blake3.workspace = true
bytes.workspace = true
getrandom.workspace = true
machine-uid.workspace = true
reqwest.workspace = true
hex.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-process.workspace = true
chrono.workspace = true
serde_with.workspace = true
dotenvy.workspace = true
uuid.workspace = true
twelf.workspace = true
dirs.workspace = true
inquire.workspace = true
anyhow.workspace = true
ntest.workspace = true

[dev-dependencies]
bf-api-provider.workspace = true
tracing-test.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
cardano-serialization-lib.workspace = true
bip39.workspace = true
blockfrost.workspace = true
pallas.workspace = true
pallas-network.workspace = true
pallas-crypto.workspace = true
pallas-traverse.workspace = true
pallas-codec.workspace = true
pallas-addresses.workspace = true
pallas-primitives.workspace = true
pallas-hardano.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
jemalloc.workspace = true

[build-dependencies]
bf-build-utils.workspace = true

[lints]
workspace = true
