[package]
name = "testgen"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
serde = { version = "1.0.218", features = ["derive"] }
tracing = "0.1.41"
crossbeam = "0.8"
hex = "0.4.3"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "signal"] }
deadpool = "0.12.1"
num_cpus = "1"
chrono = "0.4"

[features]
tarpaulin = []
