[package]
name = "tx-evaluator"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
testgen = { path = "../testgen" }
node = { path = "../node" }
serde = { version = "1.0.218", features = ["derive"] }
hex = "0.4.3"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "signal"] }
pallas-network = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha5" }
pallas-crypto = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha5" }
pallas-traverse = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha5" }
pallas-codec = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha5" }
pallas-primitives = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha5" }
pallas-addresses = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha5" }
pallas-validate = { git = "https://github.com/blockfrost/pallas.git", tag = "blockfrost-platform-0.0.3-alpha5", features = [
  "phase2",
] }
chrono = "0.4"

[features]
tarpaulin = []
